--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "viacep-autofill",
-  "version": "1.2.0",
-  "description": "Drop-in helper para auto-preencher endereço via ViaCEP (Global e ES Module) com estados/erros, validateOnBlur, AbortController, timeout/retry/backoff e fallback.",
+  "version": "1.3.0",
+  "description": "Drop-in helper para auto-preencher endereço via ViaCEP (Global e ES Module) com estados/erros, validateOnBlur, AbortController, timeout/retry/backoff, fallback, cache TTL, escopo por form, UF <select> e transformers.",
   "license": "MIT",
   "author": "Luiz Paulo Andrade Costa Dias",
   "repository": {
